# aida-arbitrage-betting

./: .gitignore  README.md  example_usage.py  pyproject.toml
data/: lottomatica_scraper_20250615_210109.csv  lottomatica_scraper_20250615_214757.csv  sisal_scraper_20250615_210219.csv  sisal_scraper_20250615_214752.csv
notebooks/: arbitrage_analysis.ipynb  lottomatica_scraper_test.ipynb  scraper_test.ipynb  sisal_scraper_test.ipynb  test_selenium_scraper.py
notebooks/data/: sisal_odds_20250615_132625.csv
src/analysis/: __init__.py  arbitrage.py
src/datamodel/: __init__.py  betting_odds.py  betting_odds2.py  data_sources.py  etl_version.py  sport.py
src/scraper/: __init__.py  lottomatica_selenium_scraper.py  scraper_base.py  sisal_scraper.py  sisal_scraper_v2.py  sisal_selenium_scraper.py
src/scraper/lottomatica/: scraper_lottomatica.py
src/scraper/sisal/: scraper_sisal.py  scraper_sisal_home.py
src/storage/: __init__.py  base.py  csv_storage.py  storage_csv.py
src/utils/: __init__.py  factory.py
tests/: __init__.py  test_arbitrage_analyzer.py  test_betting_odds.py  test_data_factory.py  test_factories.py  test_factory.py
