[project]
name = "aida-arbitrage-betting"
version = "0.1.0"
description = "Web scraping project for analyzing live betting odds to identify arbitrage opportunities during PSG vs Atletico Madrid match"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
]
